feat(addstaff): add staff api by phone number
